# qosmos-kernel

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  examples  pyproject.toml
docs/: runtime_loop.md  sims.md
examples/: minimal_run.py
qosmos/: __init__.py  contracts.py  errors.py  memory.py  operators.py  runtime.py  telemetry.py  types.py
src/qosmos/: init.py
